backend inventoryPart2
